--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="/js/skycons.js"></script>
-    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTI2c-pkN1Yxrwi8JpirBkrEyH0ipkByg&libraries=places"></script>
+    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=&libraries=places"></script>
     <script src="/js/app.js"></script>
 </body>
 </html>
